results/SpecGenBench/4-shot/log-MinInArray-2023_11_28_00_09_28.txt
class MinInArray {
    //@ requires arr != null;
    //@ ensures \result == -1 || (\forall int i; 0 <= i && i < arr.length; arr[i] >= \result);
    public int minElementInArray(int[] arr) {
        if (arr.length == 0) return -1;
        int res = Integer.MIN_VALUE;
        //@ maintaining (\forall int i; 0 <= i && i < a.length; a[i] >= res);
        //@ maintaining 0 <= i && i <= a.length;
        //@ decreases a.length - i;
        for(int i = 0; i < arr.length; i++) {
            res = ((arr[i] < res) ? arr[i] : res);
        }
        return res;
    }
}
/home/max/Documents/JMLGPT/tmp/MinInArray.java:7: error: variable i is already defined in method minElementInArray(int[])
        //@ maintaining (\forall int i; 0 <= i && i < a.length; a[i] >= res);
                                     ^
/home/max/Documents/JMLGPT/tmp/MinInArray.java:7: error: cannot find symbol
        //@ maintaining (\forall int i; 0 <= i && i < a.length; a[i] >= res);
                                                      ^
  symbol:   variable a
  location: class MinInArray
/home/max/Documents/JMLGPT/tmp/MinInArray.java:7: error: cannot find symbol
        //@ maintaining (\forall int i; 0 <= i && i < a.length; a[i] >= res);
                                                                ^
  symbol:   variable a
  location: class MinInArray
/home/max/Documents/JMLGPT/tmp/MinInArray.java:8: error: cannot find symbol
        //@ maintaining 0 <= i && i <= a.length;
                                       ^
  symbol:   variable a
  location: class MinInArray
/home/max/Documents/JMLGPT/tmp/MinInArray.java:9: error: cannot find symbol
        //@ decreases a.length - i;
                      ^
  symbol:   variable a
  location: class MinInArray
5 errors

